--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,5 +4,6 @@
     android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:name="ru.ponomarchukpn.numcomposition.presentation.WelcomeFragment"
     tools:context=".presentation.MainActivity"
     tools:layout="@layout/fragment_welcome" />
